force-app/main/default/objects/Hygiene_Deal_Flag__c/Hygiene_Deal_Flag__c.object-meta.xml
        <CustomObject>
          <label>Hygiene Deal Flag</label>
          <pluralLabel>Hygiene Deal Flags</pluralLabel>
          <description>Per-opportunity hygiene finding. One row per (opportunity, metric_key, run_date). Dimensions denormalized on the row so reports GROUP BY region/owner/etc. natively.</description>
          <sharingModel>ReadWrite</sharingModel>
          <nameField>
  <label>Auto Number</label>
  <type>AutoNumber</type>
  <displayFormat>HYG-{0000000}</displayFormat>
</nameField>
        </CustomObject>