force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/ARR__c.field-meta.xml
    <CustomField>
      <fullName>ARR__c</fullName>
      <label>ARR (Unweighted)</label>
      <type>Currency</type>
      <precision>18</precision>
<scale>2</scale>
    </CustomField>