force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Director__c.field-meta.xml
<CustomField>
  <fullName>Director__c</fullName>
  <label>Director Name (denorm)</label>
  <type>Text</type>
  <length>120</length>
</CustomField>