force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/First_Seen_Date__c.field-meta.xml
<CustomField>
  <fullName>First_Seen_Date__c</fullName>
  <label>First Seen in Metric</label>
  <type>Date</type>

</CustomField>