force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Industry__c.field-meta.xml
<CustomField>
  <fullName>Industry__c</fullName>
  <label>Industry (denorm)</label>
  <type>Text</type>
  <length>80</length>
</CustomField>