force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Opportunity__c.field-meta.xml
    <CustomField>
      <fullName>Opportunity__c</fullName>
      <label>Opportunity</label>
      <type>Lookup</type>
      <referenceTo>Opportunity</referenceTo>
<relationshipName>HygieneDealFlags</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
    </CustomField>