force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Push_Count__c.field-meta.xml
    <CustomField>
      <fullName>Push_Count__c</fullName>
      <label>Push Count</label>
      <type>Number</type>
      <precision>5</precision>
<scale>0</scale>
    </CustomField>