force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Region__c.field-meta.xml
<CustomField>
  <fullName>Region__c</fullName>
  <label>Region (denorm)</label>
  <type>Text</type>
  <length>80</length>
</CustomField>