force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Stage__c.field-meta.xml
<CustomField>
  <fullName>Stage__c</fullName>
  <label>Stage</label>
  <type>Text</type>
  <length>80</length>
</CustomField>