force-app/main/default/objects/Hygiene_Deal_Flag__c/fields/Streak_Runs__c.field-meta.xml
    <CustomField>
      <fullName>Streak_Runs__c</fullName>
      <label>Streak Runs (consecutive)</label>
      <type>Number</type>
      <precision>5</precision>
<scale>0</scale>
    </CustomField>